[gd_scene load_steps=10 format=3 uid="uid://bjvkfrogc566e"]

[ext_resource type="Theme" uid="uid://ct3h1jpn888ka" path="res://assets/default_theme.tres" id="1_cdxlw"]
[ext_resource type="Script" uid="uid://b4r5tem0fs2ck" path="res://game/scenes/Options.gd" id="2_jk7h8"]
[ext_resource type="Texture2D" uid="uid://dds11eoi28xcv" path="res://assets/main_menu/bg.png" id="3_yfpgp"]
[ext_resource type="Script" uid="uid://1uulnljykc6d" path="res://game/scenes/ButtonList.gd" id="4_b1wvi"]
[ext_resource type="Texture2D" uid="uid://cdqhy3gm081ag" path="res://assets/es.png" id="4_k28v4"]
[ext_resource type="Texture2D" uid="uid://c6k0cxykqfytw" path="res://assets/en.png" id="5_8s8wn"]
[ext_resource type="PackedScene" uid="uid://d0u268u2tja7g" path="res://game/scenes/SceneFader.tscn" id="5_vlvlw"]
[ext_resource type="AudioStream" uid="uid://cfcrk6byeh6h3" path="res://assets/sfx/console_blip.mp3" id="6_1dvkk"]
[ext_resource type="AudioStream" uid="uid://pryshwo2d0x6" path="res://assets/sfx/mecha_peron_companieros.mp3" id="7_hs4md"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_cdxlw")
script = ExtResource("2_jk7h8")
back_scene = "res://game/scenes/MainMenu.tscn"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_yfpgp")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MarginContainer"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "GAME_TITLE_TEXT"
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Language" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Language"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "LANGUAGE_TEXT"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Language"]
layout_mode = 2

[node name="Spanish" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/Language/HBoxContainer"]
layout_mode = 2
icon = ExtResource("4_k28v4")

[node name="English" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/Language/HBoxContainer"]
layout_mode = 2
icon = ExtResource("5_8s8wn")

[node name="CursorRotation" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/CursorRotation"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "CURSOR_ROTATION_TEXT"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/CursorRotation"]
layout_mode = 2

[node name="0" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/CursorRotation/HBoxContainer"]
layout_mode = 2
text = "0ยบ"

[node name="90" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/CursorRotation/HBoxContainer"]
layout_mode = 2
text = "90ยบ"

[node name="180" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/CursorRotation/HBoxContainer"]
layout_mode = 2
text = "180ยบ"

[node name="270" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/CursorRotation/HBoxContainer"]
layout_mode = 2
text = "270ยบ"

[node name="MusicSettings" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MusicSettings"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "MUSIC_VOLUME_TEXT"

[node name="Slider" type="HSlider" parent="MarginContainer/VBoxContainer/MusicSettings"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="SoundSettings" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SoundSettings"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "SOUND_VOLUME_TEXT"

[node name="Slider" type="HSlider" parent="MarginContainer/VBoxContainer/SoundSettings"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="VoiceSettings" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VoiceSettings"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "VOICE_VOLUME_TEXT"

[node name="Slider" type="HSlider" parent="MarginContainer/VBoxContainer/VoiceSettings"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HorizontalStretch" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/HorizontalStretch"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "H_STRETCH_TEXT"

[node name="Slider" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer2/HorizontalStretch"]
layout_mode = 2
min_value = -32.0
max_value = 0.0

[node name="VerticalStretch" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VerticalStretch"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "V_STRETCH_TEXT"

[node name="Slider" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer2/VerticalStretch"]
layout_mode = 2
min_value = -32.0
max_value = 0.0

[node name="Version" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_font_sizes/font_size = 8
text = "v1.0
"
autowrap_mode = 2

[node name="ButtonList" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
script = ExtResource("4_b1wvi")

[node name="BackButton" type="Button" parent="MarginContainer/ButtonList"]
layout_mode = 2
size_flags_horizontal = 8
text = "BACK_BUTTON_TEXT"

[node name="SceneFader" parent="." instance=ExtResource("5_vlvlw")]
visible = false
layout_mode = 1

[node name="SoundSample" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_1dvkk")
bus = &"Sfx"

[node name="VoiceSample" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_hs4md")
bus = &"Voice"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Language/HBoxContainer/Spanish" to="." method="_on_spanish_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Language/HBoxContainer/English" to="." method="_on_english_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CursorRotation/HBoxContainer/0" to="." method="_on_cursor_rotation_pressed" binds= [0]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CursorRotation/HBoxContainer/90" to="." method="_on_cursor_rotation_pressed" binds= [1]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CursorRotation/HBoxContainer/180" to="." method="_on_cursor_rotation_pressed" binds= [2]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CursorRotation/HBoxContainer/270" to="." method="_on_cursor_rotation_pressed" binds= [3]]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/MusicSettings/Slider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/SoundSettings/Slider" to="." method="_on_sound_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/VoiceSettings/Slider" to="." method="_on_voice_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer2/HorizontalStretch/Slider" to="." method="_on_h_stretch_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer2/VerticalStretch/Slider" to="." method="_on_v_stretch_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/ButtonList/BackButton" to="." method="_on_back_button_pressed"]
